-- To understand this, see http://haskell.org/cabal/users-guide/

cabal-version:       >=1.16
build-type:          Simple
name:                hakaru
version:             0.3.0
synopsis:            A probabilistic programming embedded DSL
-- description:
homepage:            http://indiana.edu/~ppaml/
license:             BSD3
license-file:        LICENSE
author:              The Hakaru Team
maintainer:          ppaml@indiana.edu
-- copyright:
category:            Language
-- extra-source-files:

----------------------------------------------------------------
Source-Repository head
    Type:     git
    Location: https://github.com/hakaru-dev/hakaru

----------------------------------------------------------------
Flag traceDisintegrate
    Default:     False
    Description: Insert tracing code to help debug disintegration.

----------------------------------------------------------------
Library
    Hs-Source-Dirs:    haskell
    Default-Language:  Haskell2010
    GHC-Options:       -Wall -fwarn-tabs

    if flag(traceDisintegrate)
        Cpp-Options:   -D__TRACE_DISINTEGRATE__

    exposed-modules:   Language.Hakaru.Syntax.IClasses,
                       Language.Hakaru.Syntax.ABT,
                       Language.Hakaru.Syntax.Variable,
                       Language.Hakaru.Syntax.Value,
                       Language.Hakaru.Syntax.Datum,
                       Language.Hakaru.Syntax.DatumCase,
                       Language.Hakaru.Types.DataKind,
                       Language.Hakaru.Types.Sing,
                       Language.Hakaru.Types.HClasses,
                       Language.Hakaru.Types.Coercion,
                       Language.Hakaru.Syntax.AST,
                       Language.Hakaru.Syntax.AST.Transforms,
                       Language.Hakaru.Syntax.AST.Sing,
                       Language.Hakaru.Syntax.AST.Eq,
                       Language.Hakaru.Syntax.AST.AlphaEq,
                       Language.Hakaru.Syntax.TypeCheck,
                       Language.Hakaru.Syntax.TypeOf,
                       Language.Hakaru.Syntax.Prelude,
                       Language.Hakaru.Parser.AST,
                       Language.Hakaru.Parser.Maple,
                       Language.Hakaru.Parser.Parser,
                       Language.Hakaru.Parser.SymbolResolve,
                       Language.Hakaru.Pretty.Haskell,
                       Language.Hakaru.Pretty.Concrete,
                       Language.Hakaru.Pretty.Maple,
                       Language.Hakaru.Runtime.Prelude,
                       Language.Hakaru.Expect,
                       Language.Hakaru.Observe,
                       Language.Hakaru.Simplify,
                       Language.Hakaru.Sample,
                       Language.Hakaru.Evaluation.Types,
                       Language.Hakaru.Evaluation.Lazy,
                       Language.Hakaru.Evaluation.ConstantPropagation,
                       Language.Hakaru.Evaluation.DisintegrationMonad,
                       Language.Hakaru.Disintegrate,
                       Language.Hakaru.Inference,
                       Language.Hakaru.Util.Csv,
                       Data.Number.Nat,
                       Data.Number.Natural

    other-modules:     Language.Hakaru.Util.Extras,
                       Language.Hakaru.Util.Lex,
                       -- Language.Hakaru.Util.Visual,
                       System.MapleSSH

-- LH == Language.Hakaru
-- primitive is used in LH.Types
-- process is used in System/MapleSSH
-- pretty used in LH.PrettyPrint
-- transformer used in LH.Maple
-- math-functions used in LH.Distributions (and in Maple)
-- monad-loops used in LH.Distributions
-- vector used in LH.Util.Csv
-- bytestring used in LH.Util.Csv
-- zlib used in LH.Util.Csv
-- cassava used in LH.Util.Csv
-- text used in LH.Util.Visual
-- aeson used in LH.Util.Visual
-- integration used in LH.Sample
-- filepath is used in Examples/Slam

    build-depends:     base             >= 4.7  && < 5.0, 
                       Cabal            >= 1.16,
                       ghc-prim         >= 0.3  && < 0.6,
                       transformers     >= 0.3  && < 0.6,
                       containers       >= 0.5  && < 0.6,
                       pretty           >= 1.1  && < 1.2,
                       logfloat         >= 0.13 && < 0.14,
                       math-functions   >= 0.1  && < 0.2,
                       vector           >= 0.10,
                       indentation      >= 0.2.1,
                       ansi-terminal    >= 0.6,
                       cassava          >= 0.4  && < 0.5,
                       zlib             >= 0.5  && < 0.7,
                       bytestring       >= 0.10 && < 0.11,
                       -- aeson         >= 0.7  && < 0.12,
                       text             >= 0.11 && < 1.3,
                       -- statistics    >= 0.11 && < 0.14,
                       parsec           >= 3.1  && < 3.2,
                       -- array         >= 0.4,
                       mwc-random       >= 0.13 && < 0.14,
                       directory        >= 1.2  && < 1.3,
                       integration      >= 0.2.0 && < 0.3.0,
                       primitive        >= 0.5  && < 0.7,
                       monad-loops      >= 0.3.0.2,
                       process          >= 1.1  && < 2.0,
                       HUnit            >= 1.2  && < 2.0,
                       mtl              >= 2.1,
                       filepath         >= 1.1.0.2

----------------------------------------------------------------
Test-Suite system-testsuite
    Type:              exitcode-stdio-1.0
    Main-is:           Tests/TestSuite.hs
    Hs-Source-Dirs:    haskell
    Default-Language:  Haskell2010
    GHC-Options:       -Wall -fwarn-tabs

    Build-Depends:     base             >= 4.6  && < 5.0, 
                       Cabal            >= 1.16, 
                       ghc-prim         >= 0.3  && < 0.6,
                       indentation      >= 0.2.1,
                       transformers     >= 0.3  && < 0.6,
                       containers       >= 0.5  && < 0.6,
                       logfloat         >= 0.13 && < 0.14,
                       parsec           >= 3.1  && < 3.2,
                       primitive        >= 0.5  && < 0.7,
                       pretty           >= 1.1  && < 1.2,
                       mwc-random       >= 0.13 && < 0.14,
                       math-functions   >= 0.1  && < 0.2,
                       monad-loops      >= 0.3.0.2,
                       integration      >= 0.2  && < 0.3,
                       ansi-terminal    >= 0.6,
                       HUnit            >= 1.2  && < 2.0,
                       QuickCheck       >= 2.6,
                       process          >= 1.1  && < 2.0,
                       mtl              >= 2.1,
                       vector           >= 0.10,
                       text             >= 0.11 && < 1.3,
                       cassava          >= 0.4  && < 0.5,
                       zlib             >= 0.5  && < 0.7,
                       bytestring       >= 0.10 && < 0.11

----------------------------------------------------------------
Executable hakaru
    Main-is:           Hakaru.hs
    Hs-Source-Dirs:    commands
    Default-Language:  Haskell2010
    GHC-Options:       -O2 -Wall -fwarn-tabs

    build-depends:     base             >= 4.7  && < 5.0, 
                       mwc-random       >= 0.13 && < 0.14,
                       text             >= 0.11 && < 1.3,
                       pretty           >= 1.1  && < 1.2,
                       hakaru           >= 0.3

----------------------------------------------------------------
Executable simplify
    Main-is:           Simplify.hs
    Hs-Source-Dirs:    commands
    Default-Language:  Haskell2010
    GHC-Options:       -O2 -Wall -fwarn-tabs

    build-depends:     base             >= 4.7  && < 5.0, 
                       mwc-random       >= 0.13 && < 0.14,
                       text             >= 0.11 && < 1.3,
                       pretty           >= 1.1  && < 1.2,
                       hakaru           >= 0.3

----------------------------------------------------------------
Executable disintegrate
    Main-is:           Disintegrate.hs
    Hs-Source-Dirs:    commands
    Default-Language:  Haskell2010
    GHC-Options:       -O2 -Wall -fwarn-tabs

    build-depends:     base             >= 4.7  && < 5.0, 
                       mwc-random       >= 0.13 && < 0.14,
                       text             >= 0.11 && < 1.3,
                       pretty           >= 1.1  && < 1.2,
                       hakaru           >= 0.3

----------------------------------------------------------------
Executable pretty
    Main-is:           Pretty.hs
    Hs-Source-Dirs:    commands
    Default-Language:  Haskell2010
    GHC-Options:       -O2 -Wall -fwarn-tabs

    build-depends:     base             >= 4.7  && < 5.0, 
                       mwc-random       >= 0.13 && < 0.14,
                       text             >= 0.11 && < 1.3,
                       pretty           >= 1.1  && < 1.2,
                       hakaru           >= 0.3

----------------------------------------------------------------
Executable normalize
    Main-is:           Normalize.hs
    Hs-Source-Dirs:    commands
    Default-Language:  Haskell2010
    GHC-Options:       -O2 -Wall -fwarn-tabs

    build-depends:     base             >= 4.7  && < 5.0, 
                       mwc-random       >= 0.13 && < 0.14,
                       text             >= 0.11 && < 1.3,
                       mtl              >= 2.1,
                       pretty           >= 1.1  && < 1.2,
                       hakaru           >= 0.3

----------------------------------------------------------------
----------------------------------------------------------- fin.
